# scio-ai

./: .gitignore  CLAUDE.md  README.md  START-AUTO.ps1  START.bat  SUPER_AGENT_CAPABILITIES.md  install-autostart.bat  install_cloudflared.ps1  public_url.txt  pyproject.toml  requirements.txt  requirements_extended.txt  settings.local.json  start.py  start_money_machine.bat  start_public_api.ps1  start_tunnel.ps1  test_super_agent.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
backend/: app.py  config.py
backend/agents/: __init__.py  multi_agent.py
backend/ai_modules/: __init__.py
backend/automation/: __init__.py  auto_worker.py  money_maker.py  notifications.py  scheduler.py
backend/autonomy/: __init__.py  ai_programmer.py  capability_analyzer.py  code_generator.py  evolution_planner.py  memory.py  self_awareness.py  self_tester.py  task_verifier.py
backend/capabilities/: __init__.py  capability_engine.py  tool_registry.py
backend/core/: __init__.py  config_validator.py  constants.py  performance.py  plugins.py  reliability.py  security.py
backend/decision/: __init__.py  decision_engine.py  rule_engine.py
backend/integrations/: __init__.py  runpod.py  vastai.py
backend/knowledge/: __init__.py  knowledge_graph.py
backend/learning/: __init__.py  continuous_learning.py  rl_agent.py
backend/models/: __init__.py  api_key.py  earnings.py  job.py
backend/monitoring/: __init__.py  drift_detector.py  performance_tracker.py  prometheus_exporter.py
backend/orchestration/: __init__.py  event_bus.py  orchestrator.py  workflow_engine.py
backend/planning/: __init__.py  planner.py
backend/routes/: __init__.py  admin.py  ai_modules.py  api.py  autonomy.py  capabilities.py  config_api.py  marketplace.py  openapi.py  orchestration.py  public_api.py  stats.py  tools.py  webhooks.py
backend/services/: __init__.py  api_keys.py  cache_service.py  (+5 more)
docs/: architecture.md  getting-started.md
examples/: basic_experiment.yaml  data_analysis.yaml  llm_workflow.yaml  simple_test.yaml  tool_test.yaml
frontend/: admin.html  docs.html  index.html  index_full.html.bak
scio/: __init__.py  __main__.py  super_agent.py  ultimate.py
tests/: __init__.py  comprehensive_test.py  conftest.py
(+159 files in other folders)
